--- a/sass/components/hero.scss
+++ b/sass/components/hero.scss
@@ -1,14 +1,12 @@
 @use '../abstracts' as *;
 
-// Have to overide the homepage h1 text-align on large devices and set it to text-align left
-
 .main-hero {
     height: rem(843px);
     padding: 0 rem(10px);
+    overflow: hidden;
     background-color: $peach;
     position: relative;
-    overflow: hidden;
-    z-index: -1;
+    z-index: 1;
     background-image: url(../assets/home/desktop/bg-pattern-hero-home.svg);
     background-repeat: no-repeat;
     background-position: top rem(104px) right rem(-300px);
@@ -17,17 +15,19 @@
         background-position: top rem(120px) right rem(-120px);
     }
     @include mq(large) {
-        background-position: top right;
         display: flex;
         height: rem(640px);
         padding: 0;
+        background-position: top right;
     }
     &__content {
         margin: 0 auto;
         max-width: 327px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        position: relative;
+        z-index: 3;
+        @extend %flex;
+        @extend %flex-d-c;
+        @extend %flex-ai-c;
         @include mq(medium) {
             max-width: rem(575px);
         }
@@ -40,8 +40,8 @@
         padding-top:    rem(82px);
         padding-bottom: rem(30px);
         @include mq(large) {
+            margin-bottom: rem(25px);
             padding: 0;
-            margin-bottom: rem(24px);
             text-align: left;
         }
     }
@@ -50,26 +50,29 @@
         font-weight: 400;
         font-size: rem(15px);
         line-height: rem(25px);
+        margin-bottom: rem(24px);
         @include mq(medium) {
             max-width: rem(445px);
         }
         @include mq(large) {
-         text-align: left;
+            text-align: left;
+            margin-bottom: rem(40px);
         }
     }
     &__image {
         margin: auto;
         padding-top: 630px;
         position: absolute;
+        z-index: 2;
         top:    -9999px;
         left:   -9999px;
         right:  -9999px;
         bottom: -9999px;
         @include mq(large) {
-            position: static;
+            margin-top:   rem(-40px);
+            margin-right: rem(-75px);
             padding-top: 0;
-            margin-top: -40px;
-            margin-right: -75px;
+            position: static;
         }
     }
 }
