--- a/sass/components/navigations.scss
+++ b/sass/components/navigations.scss
@@ -5,6 +5,7 @@
     position: fixed;
     top: -100%;
     left: 0;
+    z-index: 10;
     background-color: rgba(0, 0, 0, 0.85);
     @extend %width-100;
     &[data-visible="true"] {
