--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -3,14 +3,11 @@
 header {
     height: rem(96px);
     padding: 0 5%;
-    position: sticky;
-    top: 0;
     background-color: white;
     @extend %flex;
     @extend %flex-ai-c;
     @extend %flex-jc-sb;
     @include mq(medium) {
         height: rem(155px);
-        position: static;
     }
 }
